[package]
name = "social-ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
async-trait = "0.1"
chrono = "0.4"

[[example]]
name = "crypto_analysis"
path = "examples/crypto_analysis.rs"
